<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ride_history"
            android:icon="@drawable/hist"
            android:title="@string/ride_history" />
        <item
            android:id="@+id/nav_rate_card"
            android:icon="@drawable/card_1"
            android:title="@string/rate_card"
            />

        <item
            android:id="@+id/offer"
            android:icon="@drawable/offer_3"
            android:title="Offers" />
        <item
            android:id="@+id/refer_earn"
            android:icon="@drawable/gift"
            android:title="@string/refer_earn" />

        <item
            android:id="@+id/wallet"
            android:icon="@drawable/support_1"
            android:title="@string/wallet" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/support_1"
            android:title="@string/support" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/info"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />


    </group>

</menu>
