<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp"

    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        android:id="@+id/bottom">
        <LinearLayout
            android:id="@+id/dailtLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="@string/daily"
            android:elevation="16dp"
            android:layout_margin="5dp"
            android:onClick="RentalCheck"
            android:background="@drawable/bottom_design">

            <tech.iwish.taxi.extended.TextViewFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                app:fonttype="font5"
                android:gravity="center"
                android:textColor="@color/blackColor"
                android:padding="3dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rentalLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:tag="@string/rental"
            android:elevation="16dp"
            android:onClick="RentalCheck"
            android:background="@drawable/bottom_design_1"
            android:layout_margin="5dp">
            <tech.iwish.taxi.extended.TextViewFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rental"
                android:padding="3dp"
                app:fonttype="font5"
                android:textColor="@color/blackColor"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/outStationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/outstation"
            android:elevation="16dp"
            android:gravity="center"
            android:onClick="RentalCheck"
            android:layout_margin="5dp"
            android:background="@drawable/bottom_design_1">
            <tech.iwish.taxi.extended.TextViewFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outstation"
                android:textColor="@color/blackColor"
                android:padding="3dp"
                app:fonttype="font5"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>