<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orangeColor"
    android:weightSum="2"
    tools:context=".activity.MoneyAddWalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/white_logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:orientation="vertical"
        android:padding="13dp"
        android:background="@drawable/wallet_design_1"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <tech.iwish.taxi.extended.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_money_wallet"
                android:textSize="12sp"/>
            <tech.iwish.taxi.extended.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rayru_wallet"
                android:textColor="@color/blackColor"
                android:textSize="16sp"/>
            <tech.iwish.taxi.extended.TextViewFont
                android:id="@+id/wallet_money_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"/>
            <LinearLayout
                android:id="@+id/wallet_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <tech.iwish.taxi.extended.EditTextFont
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/wallet_icon"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:textColor="@color/blackColor"
                    android:backgroundTint="@color/orangeColor"
                    android:textSize="18sp"/>
                <tech.iwish.taxi.extended.ButtonFont
                    android:id="@+id/proccess_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/wallet_button"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/proceed_money"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="35dp"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/bottom_wallet_image" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>